styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: #0E0C15;
    --ultramute: #FFFFFF;

    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 5.9% 10%;
    --radius: 0.5rem;
    --n1: #FFFFFF;
    --n2: #CAC6DD;
    --n3: #ADA8C3;
    --n4: #757185;
    --n5: #3F3A52;
    --n6: #252134;
    --n7: #15131D;
    --n8: #0E0C15;
    --n9: #474060;
    --n10: #43435C;
    --n11: #1B1B2E;
    --n12: #2E2A41;
    --n13: #6C7275;
  }

  .dark {
    --background: 224 71.4% 2.1%;;
    --ultramute: #FFFFFF;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --n1: #FFFFFF;
    --n2: #CAC6DD;
    --n3: #ADA8C3;
    --n4: #757185;
    --n5: #3F3A52;
    --n6: #252134;
    --n7: #15131D;
    --n8: #0E0C15;
    --n9: #474060;
    --n10: #43435C;
    --n11: #1B1B2E;
    --n12: #2E2A41;
    --n13: #6C7275;
  }
}


@layer base {
  * {
    @apply border-border;
    scroll-behavior: smooth

  }
  body {
    @apply  bg-background text-ultra;
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

.text-gradient_indigo-purple {
  background: linear-gradient(90deg, #ef63f1 0%, hsla(271, 91%, 65%, 0.8) 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

* {
  scroll-behavior: smooth
}

